# cache

./: CMakeLists.txt  README.md  data.txt  lirs.h  lirs_cache.cpp  perfect.h  perfect_cache.cpp
include/: lirs.h  perfect.h
lirs_tests/extra_test/: cache10_data10000000.ans
unit_tests/funcs/: file.h  test_funcs.h
unit_tests/lirs/: CMakeLists.txt  lirs_tests.cpp
unit_tests/perfect/: CMakeLists.txt  perf_tests.cpp
utils/: utils.h
